@@ -39,6 +39,7 @@
 #define	GUI_MSG_SHOWRANGE      18
 
 #define GUI_MSG_FULLSCREEN		19		// should go to fullscreen window (vis or video)
+#define GUI_MSG_EXECUTE				20		// user has clicked on a button with <execute> tag
 
 #define GUI_MSG_USER         1000
 #include <string>
