@@ -38,7 +38,7 @@
 #include "GUIDialogFileStacking.h"
 #include "GUIDialogVolumeBar.h"
 #include "GUIDialogSubMenu.h"
-#include "GUIDialogContextMenu.h"
+//#include "GUIDialogContextMenu.h"
 #include "GUIWindowSystemInfo.h"
 #include "GUIWindowSettingsLCD.h"
 #include "GUIWindowSettingsGeneral.h"
@@ -178,7 +178,7 @@ public:
 	CGUIDialogOK										m_guiDialogOK;
 	CGUIDialogVolumeBar							m_guiDialogVolumeBar;
 	CGUIDialogSubMenu								m_guiDialogSubMenu;
-	CGUIDialogContextMenu						m_guiDialogContextMenu;
+//	CGUIDialogContextMenu						m_guiDialogContextMenu;
 	CGUIWindowMyFiles								m_guiMyFiles;
 	CGUIWindowVideo									m_guiMyVideo;
 	CGUIWindowSettings							m_guiSettings;
