@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 05-09-2004 added: <execute> tags to button controls for executing xbes/movies/scripts/audio
+  - 05-09-2004 added: <aligny> tag to button controls for vertical alignment
+  - 05-09-2004 fixed: Volume bar caused flashes when it disappeared + hid the OSD etc.
   - 04-09-2004 added: Add more network settings in GUI: FTP server, Web server, time synchronization
   - 03-09-2004 fixed: SMB did not handle files with non ASCII names properly (got NT_OBJECT_NOT_FOUND)
   - 03-09-2004 fixed: eliminate crash that occurs when loading wma files which have non ASCII characters in its tags
